[package]
name = "ipinfo"
description = "ipinfo: A Rust library for IPInfo"
version = "0.1.0"
authors = [
    "Amr Ali <amralicc@gmail.com>",
    "Uman Shahzad <uman@mslm.io>",
    "Umar Farooq <umar@ipinfo.io>",
    "Fayzan Ahmad <fayzanx@gmail.com>",
    "Jerry <me@jerryshell.eu.org>",
]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/jerryshell/ipinfo-rust-lib"
readme = "README.md"
categories = ["network-programming"]
keywords = ["ip", "geolocation", "ipinfo", "ip-address"]
exclude = [".gitignore", ".travis.yml", ".cargo/config"]

[dependencies]
reqwest = { version = "*", default-features = false, features = [
    "rustls-tls",
    "blocking",
    "json",
] }
lru = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
include_dir = "*"

[dev-dependencies]
dotenv = "*"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
